--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         </ul>
       </div>
       <div class="social-icons">
-        <a href=""><i class="fab fa-facebook"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
-        <a href=""><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
         <p class="copy">&copy; Copyright 2018 Huddle. All rights reserved.
         
